@@ -1,6 +1,8 @@
 %h1 
   Functions
 
+= message
+
 = form :action => resource(:admin, :functions, :update_all), :method => 'PUT' do
   %table
     %thead
