@@ -22,10 +22,10 @@ module OupsNow
       Function.create(:name => 'Developper', :project_admin => false)
       State.create(:name => 'new')
       State.create(:name => 'open')
-      State.create(:name => 'resolved')
-      State.create(:name => 'hold')
-      State.create(:name => 'closed')
-      State.create(:name => 'invalid')
+      State.create(:name => 'resolved', :closed => true)
+      State.create(:name => 'hold', :closed => true)
+      State.create(:name => 'closed', :closed => true)
+      State.create(:name => 'invalid', :closed => true)
       Priority.create(:name => 'Low')
       Priority.create(:name => 'Normal')
       Priority.create(:name => 'High')
